fix: spheres jumping bag

--- a/src/page-components/home/hero/hero.module.scss
+++ b/src/page-components/home/hero/hero.module.scss
@@ -3,6 +3,7 @@
   padding-bottom: 60px;
   color: var(--greyscale-11);
   position: relative;
+  min-height: 550px;
 
   &__container {
     position: relative;
@@ -266,6 +267,7 @@
   @include laptop {
     padding-top: 150px;
     padding-bottom: 250px;
+    min-height: 700px;
     &__title {
       @include title-light-italic-52;
       margin-bottom: 52px;
